# sunfutures

sunfutures_repo_ui_polish_2026_02_16/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
sunfutures_repo_ui_polish_2026_02_16/apps/api/: Dockerfile  README.md  README_LINTING.md  pyproject.toml
sunfutures_repo_ui_polish_2026_02_16/apps/api/app/: auth.py  cache.py  equipment.py  gefs.py  main.py  providers.py  reporting.py  storage.py
sunfutures_repo_ui_polish_2026_02_16/apps/mobile/: app.json  eas.json  eslint.config.js  package.json  tsconfig.json
sunfutures_repo_ui_polish_2026_02_16/apps/mobile/src/: App.tsx  api.ts  config.ts
sunfutures_repo_ui_polish_2026_02_16/docs/: ARCHITECTURE.md
sunfutures_repo_ui_polish_2026_02_16/infra/fly/: README.md  fly.toml
sunfutures_repo_ui_polish_2026_02_16/scripts/: dev_api_windows.ps1  dev_mobile.sh
