[project]
name = "sunfutures-api"
version = "0.2.1"
description = "SunFutures API - PV forecasting backend (mobile-ready, Fly.io)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2",
  "httpx>=0.27",
  "pandas>=2.2",
  "numpy>=1.26",
  "pvlib>=0.10.5",
  "python-dateutil>=2.9",
  "pytz>=2024.1"  "redis>=5.0",>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2",  "boto3>=1.34",

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
  "types-python-dateutil>=2.9.0.20240316",
  "pandas-stubs>=2.2.0.240218"  "PyJWT>=2.9",


[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
gefs = [
  "xarray>=2024.6.0",
  "cfgrib>=0.9.10.4",
  "s3fs>=2024.6.0",
  "fsspec>=2024.6.0"
]
report = [
  "jinja2>=3.1.4"
]
